examples/errors/11_expression_is_not_allowed/definitions.tmd
@extend
group Widget;

group Root {
    + Widget
}

element Window -> Root {
    width: u32,
    height: u32,
    allow_resize: bool,
    smooth: f64,
}

element Text -> Widget {
    value: String,
    font_size: i8,
    wrap: Wrap
}

enum Wrap {
    NoWrap,
    Wrap,
}

@groups [Widget]
expression DynamicInteger {
    min: u32,
    max: u32,
}